--- a/src/components/BadgesList/BadgesList.css
+++ b/src/components/BadgesList/BadgesList.css
@@ -1,15 +1,11 @@
-.BadgesList {
-  /* margin-bottom: 1rem; */
-}
-
 .Badge {
   background: rgba(0, 0, 0, 0.01);
-  box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 3px 3px 6px 3px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   display: flex;
   justify-items: center;
   padding: 1rem;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 .Badge__avatar {
@@ -20,21 +16,35 @@
   margin-right: 1rem;
 }
 
-.Badge__info {
+.Badge__name {
+  margin: 0 0 8px;
 }
 
 .Badge__name,
-.Badge__twitter {
-  margin: 0 0 .5em;
+.Badge__jobTitle {
+  color: #333;
+}
+
+.Twitter {
+  display: flex;
 }
 
 .Badge__twitter {
   color: #1A91DA;
   font-size: .9em;
+  cursor: pointer;
+  margin: 0 0 8px;
 }
 
 .Badge__twitter::before {
   content: '@';
+}
+
+.Badge__twitter-logo {
+  background-image: url('../../images/logo-twitter.svg');
+  width: 20px;
+  height: 20px;
+  margin:0;
 }
 
 .Badge__jobTitle {
