--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Anton');
 
+html {
+  box-sizing: border-box;
+}
 
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: inherit;
 }
 
 body {
@@ -39,7 +43,8 @@ ul {
 }
 
 .btn {
-  padding: 0.375rem 2rem;
+  padding: 0.5rem 2rem;
+  border-radius: .2rem;
 }
 
 .btn.btn-primary {
